--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -1,6 +1,15 @@
 .Home {
+  min-height: 100vh;
+  width: 80%;
+  margin: auto;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.Container {
+  width: 100%;
   background-color: white;
-  width: 80vw;
   border-radius: 10px;
   box-shadow: 10px 10px 5px #006d77;
 }
