centering manual css title

--- a/src/views/TODOList.css
+++ b/src/views/TODOList.css
@@ -1,3 +1,9 @@
+.list {
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+}
+
 .list-content {
   display: flex;
   align-items: center;
