--- a/src/views/Home.css
+++ b/src/views/Home.css
@@ -1,13 +1,12 @@
 .Home {
   min-height: 100vh;
-  width: 80%;
+  width: 80vw;
   margin: auto;
   display: flex;
-  align-items: center;
-  justify-content: center;
 }
 
-.Container {
+.container {
+  margin: auto;
   width: 100%;
   background-color: white;
   border-radius: 10px;
