--- a/karet-frontend/src/index.css
+++ b/karet-frontend/src/index.css
@@ -4,6 +4,6 @@
 body {
   margin: 0;
   /* TODO: Change the background color to a gradient */
-  background: blue;
+  background: #F5F3F3;
   overflow-x: hidden;
 }
